# pr-checker

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  action.yml  pr-checker.yml
.github/: dependabot.yml  pr-checker.yml  pr-checker.yml.example
.github/workflows/: example.yml
deploy/: Dockerfile
src/: engine.rs  error.rs  main.rs
src/config/: mod.rs  schema.rs
src/github/: mod.rs  pr.rs
src/rules/: labels.rs  mod.rs  title.rs
